--- a/style.css
+++ b/style.css
@@ -5,5 +5,34 @@ body{
     width: 80%;
     margin:auto;
 
+}
 
+.cabecalho {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.cabecalho>div {
+
+width: 50%;
+
+}
+
+.whatsapp-button {
+    display: inline-block;
+    background-color: #25d366;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-top: 20px;
+    transition: backgorund-volor 0.3s;
+}
+
+.whatsapp-button:hover {
+    background-color: #128C7E;
 }
